fixed broken donor flow
